reviews.google: quantum chemistry

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -710,6 +710,17 @@ journal = {Fortschritte der Physik},
    journal={Quantum},
    publisher={Verein zur Forderung des Open Access Publizierens in den Quantenwissenschaften},
 }
+@article{Hempel_2018,
+    title	= {Quantum Chemistry Calculations on a Trapped-Ion Quantum Simulator},
+    author	= {Cornelius Hempel and Christine Maier and Jhonathan Romero and Jarrod McClean and Thomas Monz and Heng Shen and Petar Jurcevic and Ben Lanyon and Peter J. Love and Ryan Babbush and Alán Aspuru-Guzik and Rainer Blatt and Christian Roos},
+    year	= {2018},
+    DOI = {10.1103/PhysRevX.8.031022},
+    URL	= {https://journals.aps.org/prx/pdf/10.1103/PhysRevX.8.031022},
+    eprint = {1803.10238},
+    pages	= {031022},
+    volume	= {8},
+    journal	= {Physical Review X},
+}
 @article{Hensen_2015,
   title = {Loophole-free Bell inequality violation using electron spins separated by 1.3 kilometres},
   author = {B. Hensen and H. Bernien and A. E. Dr{\'{e}}au and A. Reiserer and N. Kalb and M. S. Blok and J. Ruitenberg and R. F. L. Vermeulen and R. N. Schouten and C. Abell{\'{a}}n and W. Amaya and V. Pruneri and M. W. Mitchell and M. Markham and D. J. Twitchen and D. Elkouss and S. Wehner and T. H. Taminiau and R. Hanson},
@@ -1105,6 +1116,21 @@ journal = {Fortschritte der Physik},
   eprint={1706.05413},
   publisher={National Science Foundation}
 }
+@article{OMalley_2016,
+  title = {Scalable Quantum Simulation of Molecular Energies},
+  author = {O'Malley, P. J. J. and Babbush, R. and Kivlichan, I. D. and Romero, J. and McClean, J. R. and Barends, R. and Kelly, J. and Roushan, P. and Tranter, A. and Ding, N. and Campbell, B. and Chen, Y. and Chen, Z. and Chiaro, B. and Dunsworth, A. and Fowler, A. G. and Jeffrey, E. and Lucero, E. and Megrant, A. and Mutus, J. Y. and Neeley, M. and Neill, C. and Quintana, C. and Sank, D. and Vainsencher, A. and Wenner, J. and White, T. C. and Coveney, P. V. and Love, P. J. and Neven, H. and Aspuru-Guzik, A. and Martinis, J. M.},
+  year = {2016},
+  month = {Jul},
+  doi = {10.1103/PhysRevX.6.031007},
+  eprint = {1512.06860},
+  url = {https://journals.aps.org/prx/pdf/10.1103/PhysRevX.6.031007},
+  volume = {6},
+  issue = {3},
+  pages = {031007},
+  numpages = {13},
+  journal = {Phys. Rev. X},
+  publisher = {American Physical Society},
+}
 @article{Orus_2014,
 title = {A practical introduction to tensor networks: Matrix product states and projected entangled pair states},
 author = {Román Orús},
@@ -1290,6 +1316,21 @@ pages = {117-158},
   doi = {10.5772/intechopen.95023},
   publisher = {{IntechOpen}},
   booktitle = {Quantum Computing and Communications [Working Title]}
+}
+@article{Tazhigulov_2022,
+  title = {Simulating Models of Challenging Correlated Molecules and Materials on the Sycamore Quantum Processor},
+  author = {Tazhigulov, Ruslan N. and Sun, Shi-Ning and Haghshenas, Reza and Zhai, Huanchen and Tan, Adrian T.K. and Rubin, Nicholas C. and Babbush, Ryan and Minnich, Austin J. and Chan, Garnet Kin-Lic},
+  year = {2022},
+  month = {Nov},
+  doi = {10.1103/PRXQuantum.3.040318},
+  eprint = {2203.15291},
+  url = {https://journals.aps.org/prxquantum/pdf/10.1103/PRXQuantum.3.040318},
+  volume = {3},
+  issue = {4},
+  pages = {040318},
+  numpages = {11},
+  journal = {PRX Quantum},
+  publisher = {American Physical Society},
 }
 @article{Temme_2017,
   title = {Error Mitigation for Short-Depth Quantum Circuits},
