reviews.google: quantum advantage

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -1026,6 +1026,20 @@ journal = {Fortschritte der Physik},
   year={2021},
   eprint={2109.10833},
 }
+@article{McClean_2021,
+  title = {What the foundations of quantum computer science teach us about chemistry},
+  author = {Jarrod R. McClean and Nicholas C. Rubin and Joonho Lee and Matthew P. Harrigan and Thomas E. O'Brien and Ryan Babbush and William J. Huggins and Hsin-Yuan Huang},
+  year = {2021},
+  month = oct,
+  doi = {10.1063/5.0060367},
+  eprint = {2106.03997},
+  url = {https://aip.scitation.org/doi/pdf/10.1063/5.0060367},
+  volume = {155},
+  number = {15},
+  pages = {150901},
+  journal = {The Journal of Chemical Physics},
+  publisher = {{AIP} Publishing},
+}
 @article{Menicucci_2006,
   title = {Universal Quantum Computation with Continuous-Variable Cluster States},
   author = {Menicucci, Nicolas C. and van Loock, Peter and Gu, Mile and Weedbrook, Christian and Ralph, Timothy C. and Nielsen, Michael A.},
@@ -1039,6 +1053,21 @@ journal = {Fortschritte der Physik},
   numpages = {4},
   journal = {Phys. Rev. Lett.},
   publisher = {American Physical Society},
+}
+@article{Mi_2021,
+	title = {Information scrambling in quantum circuits},
+	author = {Xiao Mi and Pedram Roushan and Chris Quintana and Salvatore Mandr{\`{a}
+} and Jeffrey Marshall and Charles Neill and Frank Arute and Kunal Arya and Juan Atalaya and Ryan Babbush and Joseph C. Bardin and Rami Barends and Joao Basso and Andreas Bengtsson and Sergio Boixo and Alexandre Bourassa and Michael Broughton and Bob B. Buckley and David A. Buell and Brian Burkett and Nicholas Bushnell and Zijun Chen and Benjamin Chiaro and Roberto Collins and William Courtney and Sean Demura and Alan R. Derk and Andrew Dunsworth and Daniel Eppens and Catherine Erickson and Edward Farhi and Austin G. Fowler and Brooks Foxen and Craig Gidney and Marissa Giustina and Jonathan A. Gross and Matthew P. Harrigan and Sean D. Harrington and Jeremy Hilton and Alan Ho and Sabrina Hong and Trent Huang and William J. Huggins and L. B. Ioffe and Sergei V. Isakov and Evan Jeffrey and Zhang Jiang and Cody Jones and Dvir Kafri and Julian Kelly and Seon Kim and Alexei Kitaev and Paul V. Klimov and Alexander N. Korotkov and Fedor Kostritsa and David Landhuis and Pavel Laptev and Erik Lucero and Orion Martin and Jarrod R. McClean and Trevor McCourt and Matt McEwen and Anthony Megrant and Kevin C. Miao and Masoud Mohseni and Shirin Montazeri and Wojciech Mruczkiewicz and Josh Mutus and Ofer Naaman and Matthew Neeley and Michael Newman and Murphy Yuezhen Niu and Thomas E. O'Brien and Alex Opremcak and Eric Ostby and Balint Pato and Andre Petukhov and Nicholas Redd and Nicholas C. Rubin and Daniel Sank and Kevin J. Satzinger and Vladimir Shvarts and Doug Strain and Marco Szalay and Matthew D. Trevithick and Benjamin Villalonga and Theodore White and Z. Jamie Yao and Ping Yeh and Adam Zalcman and Hartmut Neven and Igor Aleiner and Kostyantyn Kechedzhi and Vadim Smelyanskiy and Yu Chen},
+	year = 2021,
+	month = {dec},
+	doi = {10.1126/science.abg5029},
+    eprint = {2101.08870},
+	url = {https://research.google/pubs/pub50297},
+	volume = {374},
+	number = {6574},
+	pages = {1479--1483},
+	journal = {Science},
+	publisher = {American Association for the Advancement of Science ({AAAS})},
 }
 @article{Mooney_2019,
   title = {Entanglement in a 20-Qubit Superconducting Quantum Computer},
