computing.state: added opinion "But be patient, please"

--- a/source/biblio/misc.bib
+++ b/source/biblio/misc.bib
@@ -224,6 +224,15 @@
  url     = {https://www.hpcwire.com/2020/08/19/intel-connects-the-quantum-dots-in-accelerating-quantum-computing-effort/},
  journal = {HPC wire}
 }
+@article{Shankland_2022,
+ title   = {Quantum Computing Will Change Our Lives. But Be Patient, Please},
+ author  = {Shankland, Stephen},
+ year = {2022},
+ date    = {2022-12-14},
+ urldate = {2022-12-21},
+ url     = {https://www.cnet.com/tech/computing/quantum-computing-will-change-our-lives-but-be-patient-please/},
+ journal = {CNET}
+}
 @MISC{Shaydulin_2020,
     title={{C}ombinatorial {O}ptimization on {Q}uantum {C}omputers ({IEEE} {Q}uantum {W}eek tutorial)},
     author={Shaydulin, Ruslan},
