--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -1481,6 +1481,14 @@ pages = {117-158},
    journal={Physical Review A},
    publisher={American Physical Society (APS)},
 }
+@article{Weinberg_2022,
+ title = {Supply Chain Logistics with Quantum and Classical Annealing Algorithms},
+  author = {Weinberg, Sean J. and Sanches, Fabio and Ide, Takanori and Kamiya, Kazumitzu and Correll, Randall},
+  keywords = {Quantum Physics (quant-ph), FOS: Physical sciences, FOS: Physical sciences},
+  year = {2022},
+  eprint = {2205.04435},  
+  journal = {arXiv},
+}
 @article{Whitfield_2011,
    title={Simulation of electronic structure Hamiltonians using quantum computers},
    author={Whitfield, James D. and Biamonte, Jacob and Aspuru-Guzik, Alán},
