--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -847,6 +847,18 @@ journal = {Fortschritte der Physik},
   journal = {Nature},
   publisher = {Springer Science and Business Media {LLC}}
 }
+@article{Koch_2007,
+  title = {Charge-insensitive qubit design derived from the Cooper pair box},
+  author = {Jens Koch and Terri M. Yu and Jay Gambetta and A. A. Houck and D. I. Schuster and J. Majer and Alexandre Blais and M. H. Devoret and S. M. Girvin and R. J. Schoelkopf},
+  year = {2007},
+  month = oct,
+  doi = {10.1103/physreva.76.042319},
+  eprint = {cond-mat/0703002},
+  volume = {76},
+  number = {4},
+  journal = {Physical Review A},
+  publisher = {American Physical Society ({APS})},
+}
 @article{Kwiat_1995,
   title = {New High-Intensity Source of Polarization-Entangled Photon Pairs},
   author = {Kwiat, Paul G. and Mattle, Klaus and Weinfurter, Harald and Zeilinger, Anton and Sergienko, Alexander V. and Shih, Yanhua},
@@ -1416,6 +1428,19 @@ pages = {117-158},
    journal={Applied Physics Letters},
    publisher={AIP Publishing}
 }
+@article{Vion_2002,
+  title = {Manipulating the Quantum State of an Electrical Circuit},
+  author = {D. Vion and A. Aassime and A. Cottet and P. Joyez and H. Pothier and C. Urbina and D. Esteve and M. H. Devoret},
+  year = {2002},
+  month = may,
+  doi = {10.1126/science.1069372},
+  eprint = {cond-mat/0205343},
+  volume = {296},
+  number = {5569},
+  pages = {886--889},
+  journal = {Science},
+  publisher = {American Association for the Advancement of Science ({AAAS})},
+}
 @article{Weihs_1998,
   title = {Violation of Bell's Inequality under Strict Einstein Locality Conditions},
   author = {Weihs, Gregor and Jennewein, Thomas and Simon, Christoph and Weinfurter, Harald and Zeilinger, Anton},
@@ -1429,30 +1454,6 @@ pages = {117-158},
   numpages = {0},
   journal = {Phys. Rev. Lett.},
   publisher = {American Physical Society}
-}
-@article{Xu_2018,
-  title = {Turbulent Mixing Simulation via a Quantum Algorithm},
-  author = {Guanglei Xu and Andrew J. Daley and Peyman Givi and Rolando D. Somma},
-  year = {2018},
-  month = feb,
-  doi = {10.2514/1.j055896},
-  volume = {56},
-  number = {2},
-  pages = {687--699},
-  journal = {{AIAA} Journal},
-  publisher = {American Institute of Aeronautics and Astronautics ({AIAA})}
-}
-@article{Xu_2019,
-  title = {Quantum algorithm for the computation of the reactant conversion rate in homogeneous turbulence},
-  author = {Guanglei Xu and Andrew J. Daley and Peyman Givi and Rolando D. Somma},
-  year  = {2019},
-  doi = {10.1080/13647830.2019.1626025},
-  url = {https://core.ac.uk/download/pdf/226757452.pdf},
-  volume = {23},
-  number = {6},
-  pages = {1090-1104},
-  journal = {Combustion Theory and Modelling},
-  publisher = {Taylor & Francis}
 }
 @article{Wang_2021,
    title={Noise-induced barren plateaus in variational quantum algorithms},
@@ -1529,6 +1530,30 @@ pages = {117-158},
   pages = {759--811},
   journal = {Quantum Information and Computation},
   publisher = {Rinton Press},
+}
+@article{Xu_2018,
+  title = {Turbulent Mixing Simulation via a Quantum Algorithm},
+  author = {Guanglei Xu and Andrew J. Daley and Peyman Givi and Rolando D. Somma},
+  year = {2018},
+  month = feb,
+  doi = {10.2514/1.j055896},
+  volume = {56},
+  number = {2},
+  pages = {687--699},
+  journal = {{AIAA} Journal},
+  publisher = {American Institute of Aeronautics and Astronautics ({AIAA})}
+}
+@article{Xu_2019,
+  title = {Quantum algorithm for the computation of the reactant conversion rate in homogeneous turbulence},
+  author = {Guanglei Xu and Andrew J. Daley and Peyman Givi and Rolando D. Somma},
+  year  = {2019},
+  doi = {10.1080/13647830.2019.1626025},
+  url = {https://core.ac.uk/download/pdf/226757452.pdf},
+  volume = {23},
+  number = {6},
+  pages = {1090-1104},
+  journal = {Combustion Theory and Modelling},
+  publisher = {Taylor & Francis}
 }
 @article{Zhang_2018,
   title = {{RETRACTED} {ARTICLE}: Quantized Majorana conductance},
