young_slit: cite Feynman

--- a/source/biblio/textbooks.bib
+++ b/source/biblio/textbooks.bib
@@ -16,6 +16,14 @@
 	PUBLISHER = {MIT Press},
 	ADDRESS = {Cambridge},
 }
+@BOOK{Feynman2013,
+	AUTHOR = {Feynman, Richard P. AND Leighton, Robert B. AND Sands, Matthew},
+	YEAR = {2013},
+	TITLE = {The {F}eynman {L}ectures on {P}hysics: {Q}uantum {M}echanics},
+	EDITION = {The {N}ew {M}illennium {E}dition},
+	PUBLISHER = {California Institute of Technology, Michael A. Gottlieb, and Rudolf Pfeiffer},
+    URL = {https://www.feynmanlectures.caltech.edu}
+}
 @BOOK{Hamermesh2012,
 	TITLE = {Group Theory and Its Application to Physical Problems - },
 	AUTHOR = {Hamermesh, Morton},
