Some more citations and links.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -1281,6 +1281,18 @@ pages = {117-158},
   journal = {Proceedings of the National Academy of Sciences},
   publisher = {Proceedings of the National Academy of Sciences},
 }
+@article{Rigetti_2010,
+  title = {Fully microwave-tunable universal gates in superconducting qubits with linear couplings and fixed transition frequencies},
+  author = {Chad Rigetti and Michel Devoret},
+  year = {2010},
+  month = apr,
+  doi = {10.1103/physrevb.81.134507},
+  url = {https://cpb-us-w2.wpmucdn.com/campuspress.yale.edu/dist/2/3627/files/2020/11/Rigetti_Devoret_-_Fully_Microwave-Tunable_Universal_Gates_in_Superconducting_Qubits_with_Linear_Couplings_and_Fixed_Transition_Frequencies.pdf},
+  volume = {81},
+  number = {13},
+  journal = {Physical Review B},
+  publisher = {American Physical Society ({APS})},
+}
 @article{Rudolph_2017,
   title = {Why I am optimistic about the silicon-photonic route to quantum computing},
   author = {Terry Rudolph},
