industry_opti: started review.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -1337,6 +1337,18 @@ pages = {117-158},
   year={2022},
   eprint={2203.01340},
 }
+@article{Schuetz_2022,
+  title = {Optimization of Robot-Trajectory Planning with Nature-Inspired and Hybrid Quantum Algorithms},
+  author = {Martin J.A. Schuetz and J. Kyle Brubaker and Henry Montagu and Yannick van Dijk and Johannes Klepsch and Philipp Ross and Andre Luckow and Mauricio G.C. Resende and Helmut G. Katzgraber},
+  year = {2022},
+  month = nov,
+  doi = {10.1103/physrevapplied.18.054045},
+  eprint = {2206.03651},
+  volume = {18},
+  number = {5},
+  journal = {Physical Review Applied},
+  publisher = {American Physical Society ({APS})},
+}
 @article{Shalm_2015,
   title = {Strong Loophole-Free Test of Local Realism},
   author = {Shalm, Lynden K. and Meyer-Scott, Evan and Christensen, Bradley G. and others},
