industry_opti: completed the review

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -613,6 +613,19 @@ journal = {Fortschritte der Physik},
   journal = {npj Quantum Information},
   publisher = {Springer Science and Business Media {LLC}},
 }
+@article{Goncalves_2011,
+  title = {Biased random-key genetic algorithms for~combinatorial optimization},
+  author = {Jos{\'{e}} Fernando Gon{\c{c}}alves and Mauricio G. C. Resende},
+  year = {2011},
+  month = oct,
+  doi = {10.1007/s10732-010-9143-1},
+  url = {https://doi.org/10.1007/s10732-010-9143-1},
+  volume = {17},
+  number = {5},
+  pages = {487--525},
+  journal = {Journal of Heuristics},
+  publisher = {Springer Science and Business Media {LLC}},
+}
 @misc{Griffin_2020,
   title={Investigation of quantum algorithms for direct numerical simulation of the Navier-Stokes equations},
   author={K. Griffin and Suhas S. Jain and T. Flint and W. R. Chan},
