--- a/source/biblio/misc.bib
+++ b/source/biblio/misc.bib
@@ -143,6 +143,15 @@
     howpublished={AQC 2021 - Special session on (inter)national projects for quantum annealing},
     journal={Adiabatic Quantum Computing Conference 2021}
 }
+@article{Malina_2019_report,
+    title={Exploring quantum computing use cases for manufacturing},
+    author={Malina, Roman and Woerner, Stefan},
+    year={2019},
+    month={june},
+    urldate={2022-01-04},
+    URL={https://www.ibm.com/downloads/cas/LJBOKBLW},
+    journal = {IBM Institute for Business Value},
+}
 @misc{Marwaha_2021_blog,
     title={The living QAOA reference},
     author={Marwaha, Kunal},
