reviews.google: review completed

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -1065,6 +1065,19 @@ journal = {Fortschritte der Physik},
   journal = {The Journal of Chemical Physics},
   publisher = {{AIP} Publishing},
 }
+@article{McClean_2021b,
+  title	= {Low-Depth Mechanisms for Quantum Optimization},
+  author	= {Jarrod Ryan McClean and Matthew P Harrigan and Masoud Mohseni and Nicholas Rubin and Zhang Jiang and Sergio Boixo and Vadim Smelyanskiy and Ryan Babbush and Hartmut Neven},
+  year	= {2021},
+  month = jul,
+  doi	= {10.1103/PRXQuantum.2.030312},
+  eprint = {2008.08615},
+  url = {https://journals.aps.org/prxquantum/pdf/10.1103/PRXQuantum.2.030312},
+  volume = {2},
+  number = {3},
+  journal	= {PRX Quantum},
+  publisher = {American Physical Society ({APS})},
+}
 @article{Menicucci_2006,
   title = {Universal Quantum Computation with Continuous-Variable Cluster States},
   author = {Menicucci, Nicolas C. and van Loock, Peter and Gu, Mile and Weedbrook, Christian and Ralph, Timothy C. and Nielsen, Michael A.},
