opti: add Yarkoni 2022 and conclude

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -1605,6 +1605,19 @@ pages = {117-158},
   journal = {Combustion Theory and Modelling},
   publisher = {Taylor & Francis}
 }
+@article{Yarkoni_2022,
+  title = {Quantum annealing for industry applications: introduction and review},
+  author = {Sheir Yarkoni and Elena Raponi and Thomas B\"{a}ck and Sebastian Schmitt},
+  year = {2022},
+  month = sep,
+  doi = {10.1088/1361-6633/ac8c54},
+  url = {https://doi.org/10.1088/1361-6633/ac8c54},
+  volume = {85},
+  number = {10},
+  pages = {104001},
+  journal = {Reports on Progress in Physics},
+  publisher = {{IOP} Publishing},
+}
 @article{Zhang_2018,
   title = {{RETRACTED} {ARTICLE}: Quantized Majorana conductance},
   author = {Hao Zhang and Chun-Xiao Liu and Sasa Gazibegovic and Di Xu and John A. Logan and Guanzhong Wang and Nick van Loo and Jouri D. S. Bommer and Michiel W. A. de Moor and Diana Car and Roy L. M. Op het Veld and Petrus J. van Veldhoven and Sebastian Koelling and Marcel A. Verheijen and Mihir Pendharkar and Daniel J. Pennachio and Borzoyeh Shojaei and Joon Sue Lee and Chris J. Palmstr{\o}m and Erik P. A. M. Bakkers and S. Das Sarma and Leo P. Kouwenhoven},
