quantum error correction, Google milestone

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -1268,6 +1268,19 @@ pages = {117-158},
   journal = {{Quantum}},
   publisher = {{Verein zur F{\"{o}}rderung des Open Access Publizierens in den Quantenwissenschaften}}
 }
+@article{GoogleQuantumAI_2023,
+  title = {Suppressing quantum errors by scaling a surface code logical qubit},
+  author = {Google Quantum AI},
+  year = {2023},
+  month = feb,
+  doi = {10.1038/s41586-022-05434-1},
+  eprint = {2207.06431},
+  volume = {614},
+  number = {7949},
+  pages = {676--681},
+  journal = {Nature},
+  publisher = {Springer Science and Business Media {LLC}},
+}
 @misc{Quiroz_2021,
   title={Quantifying the Impact of Precision Errors on Quantum Approximate Optimization Algorithms}, 
   author={Gregory Quiroz and Paraj Titum and Phillip Lotshaw and Pavel Lougovski and Kevin Schultz and Eugene Dumitrescu and Itay Hen},
