--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -1268,6 +1268,19 @@ pages = {117-158},
   journal = {{Quantum}},
   publisher = {{Verein zur F{\"{o}}rderung des Open Access Publizierens in den Quantenwissenschaften}}
 }
+@article{Goemans_1995,
+  title = {Improved approximation algorithms for maximum cut and satisfiability problems using semidefinite programming},
+  author = {Michel X. Goemans and David P. Williamson},
+  year = {1995},
+  month = nov,
+  doi = {10.1145/227683.227684},
+  url = {https://math.mit.edu/~goemans/PAPERS/maxcut-jacm.pdf},
+  volume = {42},
+  number = {6},
+  pages = {1115--1145},
+  journal = {Journal of the {ACM}},
+  publisher = {Association for Computing Machinery ({ACM})},
+}
 @article{GoogleQuantumAI_2023,
   title = {Suppressing quantum errors by scaling a surface code logical qubit},
   author = {Google Quantum AI},
