opti: Poggel's solution paths

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -1255,6 +1255,12 @@ pages = {117-158},
 	journal = {Journal of Physics B: Atomic, Molecular and Optical Physics},
 	publisher = {{IOP} Publishing},
 }
+@misc{Poggel_2022,
+  author={Benedikt Poggel and Nils Quetschlich and Lukas Burgholzer and Robert Wille and Jeanette Miriam Lorenz},
+  title={Recommending Solution Paths for Solving Optimization Problems with Quantum Computing}, 
+  year={2022},
+  eprint={2212.11127},
+}
 @article{Preskill_2018,
   title = {Quantum {C}omputing in the {NISQ} era and beyond},
   author = {Preskill, John},
