mlearn: reviewed Biamonte QML 2017

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -1038,12 +1038,26 @@ journal = {Fortschritte der Physik},
   year = {2022},
   month = jun,
   doi = {10.1038/s41586-022-04725-x},
-  url = {https://doi.org/10.1038/s41586-022-04725-x},
+  url = {https://www.nature.com/articles/s41586-022-04725-x.pdf},
   volume = {606},
   number = {7912},
   pages = {75--81},
   journal = {Nature},
   publisher = {Springer Science and Business Media {LLC}},
+}
+@article{Mangini_2021,
+  title = {Quantum computing models for artificial neural networks},
+  author = {S. Mangini and F. Tacchino and D. Gerace and D. Bajoni and C. Macchiavello},
+  year = {2021},
+  month = apr,
+  doi = {10.1209/0295-5075/134/10002},
+  eprint = {2102.03879},
+  url = {https://iopscience.iop.org/article/10.1209/0295-5075/134/10002/pdf},
+  volume = {134},
+  number = {1},
+  pages = {10002},
+  journal = {Europhysics Letters},
+  publisher = {{IOP} Publishing},
 }
 @misc{Marwaha_2021,
   title={Bounds on approximating Max $k$XOR with quantum and classical local algorithms}, 
