many_body: more references (NVIDIA etc.)

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -1059,6 +1059,20 @@ journal = {Fortschritte der Physik},
   journal = {Europhysics Letters},
   publisher = {{IOP} Publishing},
 }
+@article{Markov_2008,
+   title={Simulating Quantum Computation by Contracting Tensor Networks},
+   author={Markov, Igor L. and Shi, Yaoyun},
+   year={2008},
+   month=jan,
+   DOI={10.1137/050644756},
+   ISSN={1095-7111},
+   eprint={quant-ph/0511069},
+   number={3},
+   volume={38},
+   pages={963–981},
+   journal={SIAM Journal on Computing},
+   publisher={Society for Industrial & Applied Mathematics (SIAM)},
+}
 @misc{Marwaha_2021,
   title={Bounds on approximating Max $k$XOR with quantum and classical local algorithms}, 
   author={Kunal Marwaha and Stuart Hadfield},
