many_body: tensor networks basics

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -782,6 +782,20 @@ journal = {Fortschritte der Physik},
   journal = {Physical Review Letters},
   publisher = {American Physical Society ({APS})}
 }
+@article{HuangC_2021,
+  title = {Efficient parallelization of tensor network contraction for simulating quantum computation},
+  author = {Huang,  Cupjin and Zhang,  Fang and Newman,  Michael and Ni,  Xiaotong and Ding,  Dawei and Cai,  Junjie and Gao,  Xun and Wang,  Tenghui and Wu,  Feng and Zhang,  Gengyan and Ku,  Hsiang-Sheng and Tian,  Zhengxiong and Wu,  Junyin and Xu,  Haihong and Yu,  Huanjun and Yuan,  Bo and Szegedy,  Mario and Shi,  Yaoyun and Zhao,  Hui-Hai and Deng,  Chunqing and Chen,  Jianxin},
+  DOI = {10.1038/s43588-021-00119-7},
+  ISSN = {2662-8457},
+  url = {https://www.nature.com/articles/s43588-021-00119-7.pdf},
+  year = {2021},
+  month = sep,
+  volume = {1},
+  number = {9},
+  pages = {578–587},
+  journal = {Nature Computational Science},
+  publisher = {Springer Science and Business Media LLC},
+}
 @article{Huang_2021,
   title = {Power of data in quantum machine learning},
   author = {Hsin-Yuan Huang and Michael Broughton and Masoud Mohseni and Ryan Babbush and Sergio Boixo and Hartmut Neven and Jarrod R. McClean},
@@ -1434,6 +1448,20 @@ pages = {117-158},
   number = {5},
   journal = {Physical Review Applied},
   publisher = {American Physical Society ({APS})},
+}
+@article{Seitz_2023,
+  title = {Simulating quantum circuits using tree tensor networks},
+  author = {Seitz,  Philipp and Medina,  Ismael and Cruz,  Esther and Huang,  Qunsheng and Mendl,  Christian B.},
+  year = {2023},
+  month = mar,
+  DOI = {10.22331/q-2023-03-30-964},
+  url = {https://quantum-journal.org/papers/q-2023-03-30-964/pdf/},
+  eprint = {2206.01000},
+  ISSN = {2521-327X},
+  journal = {Quantum},
+  volume = {7},
+  pages = {964},
+  publisher = {Verein zur Forderung des Open Access Publizierens in den Quantenwissenschaften},
 }
 @article{Shalm_2015,
   title = {Strong Loophole-Free Test of Local Realism},
